2007-05-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-contactSearchAction]): simplified method to use the facilities
	provided by the LDAPUserManager. No longer takes care of the
	"ldap-only" url parameter since all requests are handled by the
	usermanager now.

	* SoObjects/SOGo/AgenorUserDefaults.m ([AgenorUserDefaults
	-primaryFetchProfile]): check that the value returned is not null
	before interpreting it.

	* SoObjects/SOGo/LDAPUserManager.m ([LDAPUserManager
	-contactInfosForUserWithUIDorEmail:uid]): check that uid is not empty.
	([LDAPUserManager -_fillContactMailRecords:contact]): if the
	system email is already present, remove it before adding it.

	* SoObjects/SOGo/LDAPSource.m ([LDAPSource
	-checkLogin:loginToCheckandPassword:passwordToCheck]): check that
	loginToCheck is not empty.
	([LDAPSource -fetchContactsMatching:match]): check that match is
	not empty.
	([LDAPSource -lookupContactEntry:entryID]): check that entryID is
	not empty.
	([LDAPSource -lookupContactEntryWithUIDorEmail:uid]): check that
	uid is not empty.

2007-05-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -primaryEmail]): new name
	for "mail" method.
	([SOGoUser -systemEmail]): returns the email formed from the
	username and the default mail domain.
	([SOGoUser -hasEmail:email]): test whether the user has the
	specified email, in a case-insensitive way.

	* SoObjects/SOGo/SOGoAuthenticator.m ([SOGoAuthenticator
	-LDAPCheckLogin:_loginpassword:_pwd]): use the user manager to
	check login information.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder
	+contactFolderWithName:aNameandDisplayName:aDisplayNameinContainer:aContainer]):
	no longer manage LDAP connections. The requests are forwarded to
	the relevant LDAPSource instead.

	* SoObjects/Contacts/SOGoContactFolders.m ([SOGoContactFolders
	-appendSystemSources]): pass LDAPSource objects to