@@ -1,5 +1,7 @@
 2007-05-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* UI/MailerUI/UIxMailAddressbook.m: removed obsolete module.
+
 	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
 	-contactSearchAction]): simplified method to use the facilities
 	provided by the LDAPUserManager. No longer takes care of the
